--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-    L'indirizzo è {{address}}
+    L'indirizzo locale è {{localIp}} {{publicIp}} {{ngrokUrl}}
     La data è {{date}}
 </body>
 </html>
