--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -7,7 +7,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-    L'indirizzo locale è {{localIp}} {{publicIp}} {{ngrokUrl}}
-    La data è {{date}}
+    L'indirizzo locale è {{localIp}} {{publicIp}} {{ngrokUrl}} <br>
+    La data è {{date}} <br>
+    Hostname and port {{hostname}} {{port}}
 </body>
 </html>
