fix(server): fix frontend copy
Signed-off-by: euberdeveloper <euberdeveloper@gmail.com>

--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -7,7 +7,7 @@
     <title>EagleTRT - telemetria IP</title>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <link rel="stylesheet" href="/public/home.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js"></script>
+    <script src="/public/clipboard.min.js"></script>
 </head>
 
 <body>
@@ -107,7 +107,6 @@
             </tr>
         </table>
     </div>
-    <script>new ClipboardJS('.copy');</script>
     <script src="/public/home.js"></script>
 </body>
 
