feat(server): show correctly date
Signed-off-by: euberdeveloper <euberdeveloper@gmail.com>

--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -68,7 +68,7 @@
                 </th>
                 <th>
                     <h1 id="date">
-                        {{date}}
+                        {{date.toLocaleString()}}
                     </h1>
                 </th>
                 <th>
