feat(server): add ssh on front page
Signed-off-by: euberdeveloper <euberdeveloper@gmail.com>

--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -105,6 +105,21 @@
                     <input type="button" id="copyPort" class="copy" data-clipboard-target="#port">
                 </th>
             </tr>
+            <tr>
+                <th>
+                    <h1>
+                        SSH
+                    </h1>
+                </th>
+                <th>
+                    <h1 id="ssh">
+                        {{ssh}}
+                    </h1>
+                </th>
+                <th>
+                    <input type="button" id="copySsh" class="copy" data-clipboard-target="#ssh">
+                </th>
+            </tr>
         </table>
     </div>
     <script src="/public/home.js"></script>
