feat(source): add favicon
Signed-off-by: euberdeveloper <euberdeveloper@gmail.com>

--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -7,6 +7,7 @@
     <title>EagleTRT - telemetria info</title>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <link rel="stylesheet" href="/public/home.css" />
+    <link rel=icon href="/public/favicon.ico">
     <script src="/public/clipboard.min.js"></script>
 </head>
 
@@ -25,7 +26,7 @@
                 </span>
             </div>
 
-             <!-- PUBLIC IP -->
+            <!-- PUBLIC IP -->
             <div class="item public-ip">
                 <span class="title">Public IP</span>
                 <span class="value clipboardjs" data-clipboard-target="#public-ip">{{publicIp}}</span>
@@ -34,7 +35,7 @@
                 </span>
             </div>
 
-             <!-- NGROK URL -->
+            <!-- NGROK URL -->
             <div class="item ngrok-url">
                 <span class="title">Ngrok Url</span>
                 <span class="value clipboardjs" data-clipboard-target="#ngrok-url">{{ngrokUrl}}</span>
@@ -43,7 +44,7 @@
                 </span>
             </div>
 
-             <!-- HOSTNAME -->
+            <!-- HOSTNAME -->
             <div class="item hostname">
                 <span class="title">Hostname</span>
                 <span class="value clipboardjs" data-clipboard-target="#hostname">{{hostname}}</span>
@@ -52,7 +53,7 @@
                 </span>
             </div>
 
-             <!-- PORT -->
+            <!-- PORT -->
             <div class="item port">
                 <span class="title">Port</span>
                 <span class="value clipboardjs" data-clipboard-target="#port">{{port}}</span>
@@ -61,7 +62,7 @@
                 </span>
             </div>
 
-             <!-- SSH -->
+            <!-- SSH -->
             <div class="item ssh">
                 <span class="title">SSH</span>
                 <span class="value clipboardjs" data-clipboard-target="#ssh">{{ssh}}</span>
