--- a/server/public/home.css
+++ b/server/public/home.css
@@ -50,6 +50,7 @@ h2#subtitle {
 #copyarea {
     width: 100%;
     margin: 25px;
+    padding: 20px;
     border-radius: 25px;
     background-color: #101010;
     display: flex;
@@ -115,6 +116,9 @@ h2#subtitle {
         width: 95vw;
         min-height: 100vh;
         margin: 0 2.5vw;
+    }
+    #copyarea {
+        padding: 20px 0;
     }
     h1#title {
         font-size: 2.2em;
