feat(server): add last updated
Signed-off-by: euberdeveloper <euberdeveloper@gmail.com>

--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -70,6 +70,11 @@
                     <img src="/public/copy.png" alt="copy" class="copy" />
                 </span>
             </div>
+
+            <!-- LAST UPDATE -->
+            <div class="item last-update">
+                <span id="last-update">Last updated on {{date}}</span>
+            </div>
         </div>
     </div>
 
