--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -62,6 +62,15 @@
                 </span>
             </div>
 
+            <!-- USER -->
+            <div class="item user">
+                <span class="title">User</span>
+                <span class="value clipboardjs" data-clipboard-target="#user">{{user}}</span>
+                <span class="copy">
+                    <img src="/public/copy.png" alt="copy" class="copy" />
+                </span>
+            </div>
+
             <!-- SSH -->
             <div class="item ssh">
                 <span class="title">SSH</span>
@@ -78,116 +87,6 @@
         </div>
     </div>
 
-
-    {{!-- <div id="copyarea">
-        <table>
-            <tr>
-                <th>
-                    <h1>
-                        Local Ip
-                    </h1>
-                </th>
-                <th>
-                    <h1 id="localIp">
-                        {{localIp}}
-                    </h1>
-                </th>
-                <th>
-                    <input type="button" id="copyLocalIp" class="copy" data-clipboard-target="#localIp">
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <h1>
-                        Public Ip
-                    </h1>
-                </th>
-                <th>
-                    <h1 id="publicIp">
-                        {{publicIp}}
-                    </h1>
-                </th>
-                <th>
-                    <input type="button" id="copyPublicIp" class="copy" data-clipboard-target="#publicIp">
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <h1>
-                        NgrokUrl
-                    </h1>
-                </th>
-                <th>
-                    <h1 id="ngrokUrl">
-                        {{ngrokUrl}}
-                    </h1>
-                </th>
-                <th>
-                    <input type="button" id="copyNgrokUrl" class="copy" data-clipboard-target="#ngrokUrl">
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <h1>
-                        Date
-                    </h1>
-                </th>
-                <th>
-                    <h1 id="date">
-                        {{date}}
-                    </h1>
-                </th>
-                <th>
-                    <input type="button" id="copyDate" class="copy" data-clipboard-target="#date">
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <h1>
-                        Hostname
-                    </h1>
-                </th>
-                <th>
-                    <h1 id="hostname">
-                        {{hostname}}
-                    </h1>
-                </th>
-                <th>
-                    <input type="button" id="copyHostname" class="copy" data-clipboard-target="#hostname">
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <h1>
-                        Port
-                    </h1>
-                </th>
-                <th>
-                    <h1 id="port">
-                        {{port}}
-                    </h1>
-                </th>
-                <th>
-                    <input type="button" id="copyPort" class="copy" data-clipboard-target="#port">
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <h1>
-                        SSH
-                    </h1>
-                </th>
-                <th>
-                    <h1 id="ssh">
-                        {{ssh}}
-                    </h1>
-                </th>
-                <th>
-                    <input type="button" id="copySsh" class="copy" data-clipboard-target="#ssh">
-                </th>
-            </tr>
-        </table>
-    </div> --}}
     <script src="/public/home.js"></script>
 </body>
 
