--- a/server/public/home.css
+++ b/server/public/home.css
@@ -50,7 +50,7 @@ h2#subtitle {
 
 #copyarea {
     width: 100%;
-    margin: 25px;
+    margin-top: 25px;
     padding: 20px;
     border-radius: 25px;
     background-color: #101010;
