fix(server): fix dopy to clipboard
Signed-off-by: euberdeveloper <euberdeveloper@gmail.com>

--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -20,63 +20,63 @@
             <!-- LOCAL IP -->
             <div class="item local-ip">
                 <span class="title">Local IP</span>
-                <span class="value clipboardjs" data-clipboard-target="#local-ip">{{localIp}}</span>
+                <span class="value" id="local-ip">{{localIp}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="copy" />
+                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#local-ip" />
                 </span>
             </div>
 
             <!-- PUBLIC IP -->
             <div class="item public-ip">
                 <span class="title">Public IP</span>
-                <span class="value clipboardjs" data-clipboard-target="#public-ip">{{publicIp}}</span>
+                <span class="value" id="public-ip">{{publicIp}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="copy" />
+                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#public-ip" />
                 </span>
             </div>
 
             <!-- NGROK URL -->
             <div class="item ngrok-url">
                 <span class="title">Ngrok Url</span>
-                <span class="value clipboardjs" data-clipboard-target="#ngrok-url">{{ngrokUrl}}</span>
+                <span class="value" id="ngrok-url">{{ngrokUrl}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="copy" />
+                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#ngrok-url" />
                 </span>
             </div>
 
             <!-- HOSTNAME -->
             <div class="item hostname">
                 <span class="title">Hostname</span>
-                <span class="value clipboardjs" data-clipboard-target="#hostname">{{hostname}}</span>
+                <span class="value" id="hostname" >{{hostname}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="copy" />
+                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#hostname" />
                 </span>
             </div>
 
             <!-- PORT -->
             <div class="item port">
                 <span class="title">Port</span>
-                <span class="value clipboardjs" data-clipboard-target="#port">{{port}}</span>
+                <span class="value" id="port">{{port}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="copy" />
+                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#port" />
                 </span>
             </div>
 
             <!-- USER -->
             <div class="item user">
                 <span class="title">User</span>
-                <span class="value clipboardjs" data-clipboard-target="#user">{{user}}</span>
+                <span class="value" id="user">{{user}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="copy" />
+                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#user" />
                 </span>
             </div>
 
             <!-- SSH -->
             <div class="item ssh">
                 <span class="title">SSH</span>
-                <span class="value clipboardjs" data-clipboard-target="#ssh">{{ssh}}</span>
+                <span class="value" id="ssh">{{ssh}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="copy" />
+                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#ssh" />
                 </span>
             </div>
 
