--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -13,9 +13,18 @@
 
 <body>
     <div id="content">
-        <h1 id="title">ET (Eagle Telemetria)</h1>
-        <h2 id="subtitle">Telefono Casa</h2>
-        <img src="/public/logo.png" alt="logo" id="logo">
+        <header>
+            <!-- LOGO -->
+            <img src="/public/logo.png" alt="logo" class="logo clock">
+             <!-- TITLE -->
+            <div id="title-container">
+                <h1 id="title">ET (Eagle Telemetria)</h1>
+                <h2 id="subtitle">Telefono Casa</h2>
+            </div>
+             <!-- ENGLISH LOGO -->
+            <img src="/public/logo.png" alt="logo" class="logo english-clock">
+        </header>
+
         <div id="copyarea">
             <!-- LOCAL IP -->
             <div class="item local-ip">
