--- a/server/public/home.css
+++ b/server/public/home.css
@@ -6,7 +6,9 @@
         transform: rotate(360deg);
     }
 }
-@keyframes english-clock { /* In Inghilterra sono tutti roversi... */
+
+@keyframes english-clock {
+    /* In Inghilterra sono tutti roversi... */
     from {
         transform: rotate(0deg);
     }
@@ -35,8 +37,7 @@ body {
 }
 
 header {
-    margin: 16px;
-
+    margin: 32px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -65,12 +66,12 @@ h2#subtitle {
 
 .logo {
     width: 180px;
-    margin: 28px 0;
 }
 
 .logo.clock {
     animation: clock 7s infinite;
 }
+
 .logo.english-clock {
     animation: english-clock 7s infinite;
 }
@@ -137,6 +138,18 @@ h2#subtitle {
         width: 70vw;
         margin: 0 15vw;
     }
+    .logo {
+        width: 150px;
+    }
+    .logo.english-clock {
+        display: none;
+    }
+    #title-container {
+        margin: 0 32px;
+    }
+    h1#title, h2#subtitle {
+        font-size: 2.0em;
+    }
 }
 
 @media (max-width: 1000px) {
@@ -144,21 +157,28 @@ h2#subtitle {
         width: 80vw;
         margin: 0 10vw;
     }
+    .logo {
+        width: 120px;
+    }
 }
 
 @media (max-width: 720px) {
+    header {
+        flex-direction: column;
+    }
     #content {
         width: 95vw;
         min-height: 100vh;
         margin: 0 2.5vw;
     }
-    h1#title {
+    #title-container {
+        order: 0;
+    }
+    h1#title, h2#subtitle {
         font-size: 2em;
     }
-    h2#subtitle {
-        font-size: 2em;
-    }
-    #logo {
+    .logo {
+        order: 1;
         margin: 20px 0;
         width: 170px;
     }
