feat(frontend): change ngrok host name
Signed-off-by: euberdeveloper <euberdeveloper@gmail.com>

--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -100,7 +100,7 @@
 
             <!-- HOSTNAME -->
             <div class="item ngrok-hostname">
-                <span class="title">Ngrok Hostname</span>
+                <span class="title">Ngrok Host</span>
                 <span class="value" id="ngrok-hostname">{{ngrokHostname}}</span>
                 <span class="copy">
                     <img src="/public/copy.png" alt="copy" class="clipboardjs"
