--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -31,7 +31,7 @@
                 <span class="title">Local IP</span>
                 <span class="value" id="local-ip">{{localIp}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#local-ip" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#local-ip" />
                 </span>
             </div>
 
@@ -40,7 +40,7 @@
                 <span class="title">Public IP</span>
                 <span class="value" id="public-ip">{{publicIp}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#public-ip" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#public-ip" />
                 </span>
             </div>
 
@@ -49,7 +49,7 @@
                 <span class="title">User</span>
                 <span class="value" id="user">{{user}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#user" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#user" />
                 </span>
             </div>
 
@@ -58,7 +58,7 @@
                 <span class="title">Zerotier Id</span>
                 <span class="value" id="zerotier-id">{{zerotierId}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#zerotier-id" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#zerotier-id" />
                 </span>
             </div>
 
@@ -67,7 +67,7 @@
                 <span class="title">Zerotier Ip</span>
                 <span class="value" id="zerotier-ip">{{zerotierIp}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#zerotier-ip" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#zerotier-ip" />
                 </span>
             </div>
 
@@ -76,7 +76,7 @@
                 <span class="title">Zerotier Join</span>
                 <span class="value" id="zerotier-join">{{zerotierJoin}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#zerotier-join" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#zerotier-join" />
                 </span>
             </div>
 
@@ -85,7 +85,7 @@
                 <span class="title">Zerotier SSH</span>
                 <span class="value" id="zerotier-ssh">{{zerotierSsh}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#zerotier-ssh" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#zerotier-ssh" />
                 </span>
             </div>
 
@@ -94,7 +94,7 @@
                 <span class="title">Ngrok Url</span>
                 <span class="value" id="ngrok-url">{{ngrokUrl}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#ngrok-url" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#ngrok-url" />
                 </span>
             </div>
 
@@ -103,7 +103,7 @@
                 <span class="title">Ngrok Host</span>
                 <span class="value" id="ngrok-hostname">{{ngrokHostname}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs"
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs"
                         data-clipboard-target="#ngrok-hostname" />
                 </span>
             </div>
@@ -113,7 +113,7 @@
                 <span class="title">Ngrok Port</span>
                 <span class="value" id="ngrok-port">{{ngrokPort}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#ngrok-port" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#ngrok-port" />
                 </span>
             </div>
 
@@ -122,7 +122,7 @@
                 <span class="title">Ngrok SSH</span>
                 <span class="value" id="ngrok-ssh">{{ngrokSsh}}</span>
                 <span class="copy">
-                    <img src="/public/copy.png" alt="copy" class="clipboardjs" data-clipboard-target="#ngrok-ssh" />
+                    <img src="/public/copy.svg" alt="copy" class="clipboardjs" data-clipboard-target="#ngrok-ssh" />
                 </span>
             </div>
 
