--- a/server/public/home.css
+++ b/server/public/home.css
@@ -122,7 +122,7 @@ h2#subtitle {
 }
 
 #copyarea>.item>.copy>img:hover {
-    box-shadow: 0 0 5px #ffffff;
+    filter: drop-shadow(0.5px 0.5px 0.5px #fff);
 }
 
 #last-update {
