--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>EagleTRT - telemetria ip</title>
+    <title>EagleTRT - Ermes</title>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <link rel="stylesheet" href="/public/home.css" />
     <link rel=icon href="/public/favicon.ico">
